# sticky-notes

./: .gitignore  AGENTS.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: App.vue
src/components/DesktopNoteWindow/: DesktopNoteWindow.vue
src/components/NoteCanvas/: NoteCanvas.vue
src/components/SettingsPanel/: SettingsPanel.vue
src/components/StickyNote/: StickyNote.vue  StickyNoteToolbar.vue
src/features/notes/: noteLayout.ts  noteWindow.ts  notesEvents.ts  notesPersistence.ts  notesRepository.ts  notesStore.ts  notesTypes.ts
src/features/settings/: settingsRepository.ts  settingsStore.ts  settingsTypes.ts
src/lib/: debounce.ts  errors.ts  screenBounds.ts
src/styles/: global.css
tests/unit/: DesktopNoteWindow.test.ts  notesPersistence.test.ts  notesStore.test.ts
