[package]
name = "sticky-notes"
version = "0.1.0"
description = "Tauri sticky notes MVP"
authors = ["Codex"]
edition = "2021"

[lib]
name = "sticky_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"

